feat: buildout logic to pass the jobid for stopping execution